--- a/src/main/webapp/monthly/edit_monthly.html
+++ b/src/main/webapp/monthly/edit_monthly.html
@@ -126,15 +126,29 @@
                  </div>
               </div>          
               <div class="clearfix">
+                  <label for="document">Conta/remessa</label>
+                  <div class="input">
+                      <div class='inline-inputs'>
+                          <div class="input-prepend" style='float:left; padding-right:10px'>
+                              <select class="large" name="account" id='account'></select>
+                          </div>
+                          <div class="input-prepend" style='float:left; padding-right:10px'>
+                            <span class="add-on"><img width="16" src='/images/calendar_addon.png'/></span> 
+                            <input class="input-small date" id="sendDate" name="sendDate" size="19" type="text"/>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="clearfix">
                 <label for="barCode">Código de Barras</label>
                  <div class="input">
-                    <input class="xlarge" id="barCode" name="barCode" size="30" type="text"/>
+                    <input style = "width: 380px;" class="xlarge" id="barCode" name="barCode" size="30" type="text"/>
                  </div>
               </div>          
               <div class="clearfix">
                 <label for="editableLine">Linha Digitável</label>
                  <div class="input">
-                    <input class="xlarge" id="editableLine" name="editableLine" size="30" type="text"/>
+                    <input style = "width: 380px;" class="xlarge" id="editableLine" name="editableLine" size="30" type="text"/>
                  </div>
               </div>          
               <div class="clearfix">
