--- a/src/main/webapp/monthly/edit_monthly.html
+++ b/src/main/webapp/monthly/edit_monthly.html
@@ -126,7 +126,7 @@
                  </div>
               </div>          
               <div class="clearfix">
-                  <label for="document">Conta/remessa</label>
+                  <label for="document">Conta / remessa / notificações</label>
                   <div class="input">
                       <div class='inline-inputs'>
                           <div class="input-prepend" style='float:left; padding-right:10px'>
@@ -135,6 +135,9 @@
                           <div class="input-prepend" style='float:left; padding-right:10px'>
                             <span class="add-on"><img width="16" src='/images/calendar_addon.png'/></span> 
                             <input class="input-small date" id="sendDate" name="sendDate" size="19" type="text"/>
+                          </div>
+                          <div class="input-prepend" style='float:left; padding-right:10px'>
+                            <input class="mini" id="notifications" name="notifications" size="30" type="text"/>
                           </div>
                       </div>
                   </div>
