--- a/src/main/webapp/unit/edit.html
+++ b/src/main/webapp/unit/edit.html
@@ -119,6 +119,17 @@
               </div>
           </div>
           <div class="clearfix">
+              <label for="document">CPF</label>
+              <div class="input">
+                  <div class='inline-inputs'>
+                      <div class="input-prepend" style='float:left; padding-right:10px'>
+                          <input class="medium cpf" id="document" name="document" size="30" type="text"/>
+                          <span class="help-block">CPF</span>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="clearfix lift:SecuritySnippet.hasUnitModule">
               <label for="calendarUrl">Compl url agenda</label>
               <div class="input">
                   <div class="input-prepend">
