--- a/src/main/webapp/financial_admin/account.html
+++ b/src/main/webapp/financial_admin/account.html
@@ -73,6 +73,13 @@
             </div>
           </div>
           <div class="clearfix">
+            <label for="receive">Faturada</label>
+            <div class="input">
+              <input id="receive" name='receive'/>
+              <span class="help-block">Determina se os laçamentos são exibidos na DRE</span>
+            </div>
+          </div>
+          <div class="clearfix">
             <label for="status">Status</label>
             <div class="input">
               <div class="input-prepend">
