messages_modal mobile fit

--- a/src/main/webapp/templates-hidden/toolbar.html
+++ b/src/main/webapp/templates-hidden/toolbar.html
@@ -106,7 +106,7 @@
         </div>
         -->
     </div>
-    <div id="messages_modal" class="modal hide fade">
+    <div id="messages_modal" class="modal hide fade" style="width: 90%; left: 5%; margin: auto auto auto auto; top:5%; height:100%; max-height:100%;">
         <div class="modal-header">
             <a href="#" class="close">&times;</a>
             <h3>Alertas</h3>
