--- a/src/main/webapp/quiz_admin/quiz.html
+++ b/src/main/webapp/quiz_admin/quiz.html
@@ -72,6 +72,17 @@
             </div>
           </div>
           <div class="clearfix">
+            <label for="quizHeaderFormat">Formato Cabec</label>
+            <div class="input">
+              <div class='inline-inputs'>
+                <div class="input-prepend" style='float:left; padding-right:10px'>
+                  <select class="large" id="quizHeaderFormat" name="quizHeaderFormat" >
+                  </select>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix">
             <label for="status">Status</label>
             <div class="input">
               <div class="input-prepend">
