--- a/src/main/webapp/financial/transfer240.html
+++ b/src/main/webapp/financial/transfer240.html
@@ -11,7 +11,11 @@
         return alert ("Selecione uma conta")
       }
       // create and download the remessa file
-      $.post('/monthly/transfer', {start:$('#start').val(), end:$('#end').val(), account:$('#account240').val()}, function(invoicedata){
+      $.post('/monthly/transfer', {
+        start:$('#start').val(), 
+        end:$('#end').val(), 
+        account:$('#account240').val(),
+        limit:$('#limit').val()}, function(invoicedata){
           eval ("var invoice = " + invoicedata)
           if (invoice.status == "error" || invoice.status != "success") {
             alert (invoice.message)
@@ -52,6 +56,17 @@
                 <select class="local_storage" name='account240' id="account240"></select>
             </div>
         </div>            
+        <div class="clearfix">
+          <label for="limit">Limite Boletos</label>
+            <div class="input">
+              <div class="inline-inputs">
+                <div style="float:left; padding-right:10px" class="input-prepend">
+                  <input type="text" class="input-mini local_storage" id='limit' name="limit" placeholder="dias" value="9999"/>
+                  <span class="help-block">Limite para geração de testes</span>
+                </div>
+              </div>
+            </div>
+        </div>
         <div class="clearfix">
           <label for="send"></label>
             <div class="input">
