--- a/src/main/webapp/monthly/list_monthly.html
+++ b/src/main/webapp/monthly/list_monthly.html
@@ -31,10 +31,10 @@
 			<th>Boleto</th>
 			<th>Empresa</th>
 			<th>Nome</th>
-			<th>Cliente</th>
-			<th>Descrição</th>
+			<th>Cliente / Descr</th>
+			<th>Conta</th>
 			<th>Valor</th>
-			<th>V Pago</th>
+			<th>Pago / Liquido</th>
 			<th>Vencimento</th>
 			<th>Pagamento</th>
 			<th>Atraso</th>
@@ -58,16 +58,16 @@
 					<f:companyname></f:companyname>
 				</td>
 				<td>
-					<f:bpname></f:bpname>
+					<f:bpname></f:bpname> <f:description></f:description>
 				</td>
 				<td>
-					<f:description></f:description>
+					<f:accountshortname></f:accountshortname>
 				</td>
 				<td>
 					<f:value></f:value>
 				</td>
 				<td>
-					<f:paidvalue></f:paidvalue>
+					<f:paidvalue></f:paidvalue> <f:liquidvalue></f:liquidvalue>
 				</td>
 				<td>
 					<f:dateexpiration></f:dateexpiration>
