monthly editable line - sicoob

--- a/src/main/webapp/monthly/list_monthly.html
+++ b/src/main/webapp/monthly/list_monthly.html
@@ -34,7 +34,7 @@
 			<th>Cliente / Descr</th>
 			<th>Conta</th>
 			<th>Valor</th>
-			<th>Pago / Liquido</th>
+			<th>Pago / Líquido</th>
 			<th>Vencimento</th>
 			<th>Pagamento</th>
 			<th>Atraso</th>
