calendar pub hours in advance

--- a/src/main/webapp/company_log/edit.html
+++ b/src/main/webapp/company_log/edit.html
@@ -314,6 +314,17 @@
 							</div>
 						</div>
 			            <div class="clearfix">
+		     	           <label for="hoursInAdvancePub">Antecendência</label>
+		       		       <div class="input">
+		            	      <div class='inline-inputs'>
+		                	      <div class="input-prepend" style='padding-right:10px'>
+		                    		<input class="mini" id="hoursInAdvancePub" name='hoursInAdvancePub'>
+		                  	  	  </div>
+		                      </div>
+				              <span class="help-block">Horas de antecedência para agendar</span>
+		                    </div>
+		              	</div>
+			            <div class="clearfix">
 			                <label for="calendarUrl">Compl url agenda</label>
 			                <div class="input">
 			                    <div class="input-prepend">
