--- a/src/main/webapp/manager/index.html
+++ b/src/main/webapp/manager/index.html
@@ -104,6 +104,11 @@
               <img width='32' src="/images/palet03.png"/>
            </a>
         </li>
+        <li>
+           <a href="/financial/salesIntegration.html" target="_blancccck" class="_popover" rel="popover" data-content="Exportar Vendas" data-original-title="Exportar Vendas">
+              <img width='32' src="/images/money.png"/>
+           </a>
+        </li>
       </ul>    
     </span>
   </span>
