monthly - senddate n rel - cpf karina

--- a/src/main/webapp/monthly/list_monthly.html
+++ b/src/main/webapp/monthly/list_monthly.html
@@ -35,7 +35,7 @@
 			<th>Conta</th>
 			<th>Valor</th>
 			<th>Pago / Líquido</th>
-			<th>Vencimento</th>
+			<th>Vencimento/remessa</th>
 			<th>Pagamento</th>
 			<th>Atraso</th>
 			<th>Pago</th>
@@ -71,6 +71,7 @@
 				</td>
 				<td>
 					<f:dateexpiration></f:dateexpiration>
+					<f:senddate></f:senddate>
 				</td>
 				<td>
 					<f:paymentdate></f:paymentdate>
