user edit orderincalendar can be null - unir auditStr

--- a/src/main/webapp/unit/edit.html
+++ b/src/main/webapp/unit/edit.html
@@ -138,6 +138,12 @@
               <span class="help-block">Para acessar a agenda ebelle.com.br/agenda.html?id=urlempresa&unit=complemento</span>
               </div>
           </div>
+          <div class="clearfix">
+              <label for="auditstr">Auditoria</label>
+              <div class="input">
+                <input class="xlarge disabled" disabled="true" id="auditstr" name="auditstr"  type="text"/>
+              </div>
+          </div>                     
       </div>
       <div class="well">
         <label for="btn"></label>
