cnab240 upload improvements

--- a/src/main/webapp/manager/index.html
+++ b/src/main/webapp/manager/index.html
@@ -42,7 +42,7 @@
       <h5 class="lift:SecuritySnippet.isSuperAdmin">Financeiros</h5>
       <ul class="lift:SecuritySnippet.isSuperAdmin">
         <li>
-           <a href="/manager/upload_cnab_file.html" target="_blancccck" class="_popover" rel="popover" data-content="Enviar Cnab 240" data-original-title="Enviar Cnab 240">
+           <a href="/manager/upload_cnab_file.html" target="_blancccck" class="_popover" rel="popover" data-content="Importar retorno Cnab 240" data-original-title="Importar retorno Cnab 240">
               <img width='32' src="/images/money.png"/>
            </a>
         </li>
