--- a/src/main/webapp/financial/transfer240.html
+++ b/src/main/webapp/financial/transfer240.html
@@ -10,10 +10,15 @@
       if (!$('#account240').val()) {
         return alert ("Selecione uma conta")
       }
+      var cust = $('#customer').val();
+      if (!cust) {
+        cust = "0"
+      }
       // create and download the remessa file
       $.post('/monthly/transfer', {
         start:$('#start').val(), 
         end:$('#end').val(), 
+        customer:cust, 
         account:$('#account240').val(),
         limit:$('#limit').val()}, function(invoicedata){
           eval ("var invoice = " + invoicedata)
@@ -35,6 +40,19 @@
     <div>
       <form id="form_report" class="well  form-search" method='get'>
         <div class="span8">        
+            <div class="clearfix">
+              <label for="customer">
+                <span data-i18n='Cliente'></span> 
+              </label>
+              <div class="input">
+                <div class="inline-inputs">
+                <span>
+                  <input name="customer" id="customer" class="mini id_customer_search" type="number"/> 
+                  <input placeholder="Nome" type="text" size="30" name="name_customer" class="name_customer_search normal_name"/>
+                </span>  
+                </div>
+              </div>
+            </div>
           <div class="clearfix">
             <label for="start">Intervalo</label>
               <div class="input">
