budget print - upload migration improvements

--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -281,16 +281,16 @@
                 <tr>
                   <!--th>Orçamento</th>
                   <th>Seção</th-->
-                  <th><span data-i18n='Serviço'></span></th>
-                  <th>Dente</th>
-                  <th>Obs</th>
-                  <th class="hide_on_print">Pr Lista</th>
-                  <th class="hide_on_print">Tot Lista</th>
-                  <th class="hide_on_print">Qtde</th>
-                  <th class="hide_on_print">Pr Unit</th>
-                  <th class="hide_on_print">Pr Total</th>
-                  <th class="hide_on_print">Realiz</th>
-                  <th class="hide_on_print">Ações</th>
+                  <th title="Número da coluna para impressão: 0 "><span data-i18n='Serviço'></span></th>
+                  <th title="Número da coluna para impressão: 1 ">Dente</th>
+                  <th title="Número da coluna para impressão: 2 ">Obs</th>
+                  <th title="Número da coluna para impressão: 3 ">Pr Lista</th>
+                  <th title="Número da coluna para impressão: 4 ">Tot Lista</th>
+                  <th title="Número da coluna para impressão: 5 ">Qtde</th>
+                  <th title="Número da coluna para impressão: 6 ">Pr Unit</th>
+                  <th title="Número da coluna para impressão: 7 ">Pr Total</th>
+                  <th title="Número da coluna para impressão: 8 ">Realiz</th>
+                  <th title="Número da coluna para impressão: 9 ">Ações</th>
                 </tr>
               </thead>
               <tbody>
