quiz print improvements

--- a/src/main/webapp/quiz/quiz_applying.html
+++ b/src/main/webapp/quiz/quiz_applying.html
@@ -350,9 +350,9 @@
                     if (question.type == 8 /* rich text */) {
                        template.find('.print-question').html(question.value);
                     } else {
-                       template.find('.print-question').text(question.value);
+                       template.find('.print-question').text(question.addon + " " + question.value);
                     }
-                    template.find(".txa").remove();
+                    template.find(".tx1a").remove();
                 } else {
                     var input = template.find('input');
                     input.val(question.value);
@@ -628,7 +628,7 @@
                     <span style='color:black;' class="tx1a add-on"></span>
                     <input title="" class="tx1a xlarge" id="obs" name="obs" data-answerid='0' type="text" autocomplete="off"/>
                     <span class="help-block"></span>
-                    <span id='printquestion' class='print-question'></span>
+                    <span style='font-size: 16px;' id='printquestion' class='print-question'></span>
                 </div>
                 </div>
             </div>
@@ -642,10 +642,11 @@
 
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                     <span id='labeltop' class="label-top">.</span>
-                    <span style='color:black;' class="add-on"></span>
-                    <input class="xlarge" id="obs" name="obs" data-answerid='0' type="text" autocomplete="off"/>
+                    <span style='color:black;' class="tx1a add-on"></span>
+                    <input class="tx1a xlarge" id="obs" name="obs" data-answerid='0' type="text" autocomplete="off"/>
                     <span class="help-inline">-</span>
                     <span class="help-block"></span>
+                    <span style='font-size: 16px;' id='printquestion' class='print-question'></span>
                 </div>
             </div>
         </script>
@@ -657,10 +658,11 @@
 
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                     <span id='labeltop' class="label-top">.</span>
-                    <span style='color:black;' class="add-on"></span>
-                    <input class="xlarge" id="obs" name="obs" data-answerid='0' type="text" autocomplete="off"/>
+                    <span style='color:black;' class="tx1a add-on"></span>
+                    <input class="tx1a xlarge" id="obs" name="obs" data-answerid='0' type="text" autocomplete="off"/>
                     <span class="help-inline">-</span>
                     <span class="help-block"></span>
+                    <span style='font-size: 16px;' id='printquestion' class='print-question'></span>
                 </div>
             </div>
         </script>
@@ -671,10 +673,11 @@
 
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                     <span id='labeltop' class="label-top">.</span>
-                    <span style='color:black;' class="add-on"></span>
-                    <input class="xlarge" id="obs" name="obs" data-answerid='0' type="text" autocomplete="off"/>
+                    <span style='color:black;' class="tx1a add-on"></span>
+                    <input class="tx1a xlarge" id="obs" name="obs" data-answerid='0' type="text" autocomplete="off"/>
                     <span class="help-inline">-</span>
                     <span class="help-block"></span>
+                    <span style='font-size: 16px;' id='printquestion' class='print-question'></span>
                 </div><br/><span id='break1' class='break-1'><br/></span>
                 <span class="help-block">.</span>
             </div>
